tests/lean/bad_print.lean
constant boo : nat

print definition boo

print 2

print fields nat
